# google-place-api.rs

./: Cargo.toml  README.md
src/: fetch.rs  lib.rs  main.rs
src/models/: mod.rs  place.rs  search_status.rs
src/nearby/: mod.rs  request.rs  response.rs
src/place/: mod.rs  request.rs  response.rs
