[package]
name = "find-place"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
strum = "0.23"
strum_macros = "0.23"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
