[package]
name = "google-place-api"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Rust fetch Google Places API, support both cli and crate"

[dependencies]
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
strum = "0.23"
strum_macros = "0.23"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
