[package]
name = "google-place-api"
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/kayac-chang/google-place-api.rs"
edition = "2021"
authors = ["hello kayac <egg734631@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust fetch Google Places API, support both cli and crate"

[dependencies]
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.52"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
strum = "0.23"
strum_macros = "0.23"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
